force-app/main/default/objects/SKP_Manage_Opportunity_Errors__c/SKP_Manage_Opportunity_Errors__c.object-meta.xml
<CustomObject>
    <label>SKP Manage Opportunity Errors</label>
    <nameField>
        <displayFormat>SKPOptyErr-{0000000}</displayFormat>
        <label>SKP Manage Opportunity Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SKP Manage Opportunity Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>