force-app/main/default/objects/SKP_Manage_Opportunity_Errors__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SKP Manage Opportunity Errors</relationshipLabel>
    <relationshipName>SKP_Opportunity_Errors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>