force-app/main/default/objects/SKP_Manage_Opportunity_Errors__c/fields/Step_Name__c.field-meta.xml
<CustomField>
    <fullName>Step_Name__c</fullName>
    <label>Step Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>